--- a/src/GUI/AjouterHotel.fxml
+++ b/src/GUI/AjouterHotel.fxml
@@ -2,88 +2,30 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AjouterHotelController">
+<AnchorPane id="AnchorPane" prefHeight="584.0" prefWidth="926.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AjouterHotelController">
    <children>
-      <AnchorPane fx:id="root" layoutX="162.0" layoutY="94.0" prefHeight="650.0" prefWidth="988.0">
-         <children>
-            <VBox depthTest="ENABLE" layoutX="27.0" layoutY="24.0" prefHeight="599.0" prefWidth="932.0" style="-fx-background-color: #F2F4F2;">
-               <children>
-                  <HBox prefHeight="686.0" prefWidth="932.0">
-                     <children>
-                        <VBox prefHeight="348.0" prefWidth="475.0">
-                           <children>
-                              <JFXTextField fx:id="nom" labelFloat="true" promptText="Nom Hôtel:">
-                                 <VBox.margin>
-                                    <Insets left="100.0" top="40.0" />
-                                 </VBox.margin>
-                              </JFXTextField>
-                              <JFXTextField fx:id="localisation" labelFloat="true" layoutX="10.0" layoutY="10.0" promptText="Localisation:">
-                                 <VBox.margin>
-                                    <Insets left="100.0" top="20.0" />
-                                 </VBox.margin>
-                              </JFXTextField>
-                              <JFXTextField fx:id="catégorie" labelFloat="true" layoutX="10.0" layoutY="36.0" promptText="Catégorie:">
-                                 <VBox.margin>
-                                    <Insets left="100.0" top="20.0" />
-                                 </VBox.margin>
-                              </JFXTextField>
-                              <HBox prefHeight="187.0" prefWidth="475.0">
-                                 <children>
-                                    <JFXButton fx:id="btnHome" prefHeight="32.0" prefWidth="115.0" style="-fx-background-color: #4CAF50;" text="BACK">
-                                       <font>
-                                          <Font name="System Bold" size="13.0" />
-                                       </font>
-                                    </JFXButton>
-                                    <JFXButton fx:id="btnNext" layoutX="10.0" layoutY="10.0" onAction="#ajout" prefHeight="32.0" prefWidth="115.0" style="-fx-background-color: #4CAF50;" text="Ajouter">
-                                       <HBox.margin>
-                                          <Insets left="125.0" />
-                                       </HBox.margin>
-                                       <font>
-                                          <Font name="System Bold" size="13.0" />
-                                       </font>
-                                    </JFXButton>
-                                 </children>
-                                 <padding>
-                                    <Insets left="100.0" />
-                                 </padding>
-                                 <VBox.margin>
-                                    <Insets top="40.0" />
-                                 </VBox.margin>
-                              </HBox>
-                           </children>
-                           <HBox.margin>
-                              <Insets />
-                           </HBox.margin>
-                        </VBox>
-                     </children></HBox>
-                  <HBox layoutX="10.0" layoutY="10.0" prefHeight="505.0" prefWidth="932.0">
-                     <children>
-                        <VBox prefHeight="505.0" prefWidth="457.0">
-                           <children>
-                              <VBox alignment="CENTER">
-                                 <VBox.margin>
-                                    <Insets left="40.0" right="40.0" top="30.0" />
-                                 </VBox.margin>
-                              </VBox>
-                           </children>
-                        </VBox>
-                     </children>
-                  </HBox>
-               </children>
-            </VBox>
-         </children>
-      </AnchorPane>
       <Label alignment="CENTER" layoutX="-9.0" layoutY="50.0" prefHeight="44.0" prefWidth="935.0" text="Ajout des hôtels">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
       </Label>
+      <JFXTextField fx:id="nom" labelFloat="true" layoutX="352.0" layoutY="149.0" promptText="Nom Hôtel:" />
+      <JFXTextField fx:id="localisation" labelFloat="true" layoutX="359.0" layoutY="230.0" promptText="Localisation:" />
+      <JFXTextField fx:id="catégorie" labelFloat="true" layoutX="359.0" layoutY="292.0" promptText="Catégorie:" />
+      <JFXButton fx:id="btnNext" layoutX="394.0" layoutY="479.0" onAction="#ajout" prefHeight="32.0" prefWidth="115.0" style="-fx-background-color: #4CAF50;" text="Ajouter">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </JFXButton>
+      <JFXTextField fx:id="img" layoutX="359.0" layoutY="372.0" promptText="Image" />
+      <JFXButton fx:id="btnNext1" layoutX="193.0" layoutY="372.0" onAction="#fileChooser" prefHeight="32.0" prefWidth="115.0" style="-fx-background-color: #4CAF50;" text="Parcourir">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </JFXButton>
    </children>
 </AnchorPane>
