--- a/src/GUI/afficheHotel.fxml
+++ b/src/GUI/afficheHotel.fxml
@@ -1,19 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="508.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AfficheController">
+<AnchorPane id="AnchorPane" prefHeight="748.0" prefWidth="1173.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AfficheHotelController">
    <children>
-      <JFXTextField fx:id="txtHotelSearch" layoutX="157.0" layoutY="38.0" prefHeight="31.0" prefWidth="699.0" promptText="rechercher par nom/localisation" />
-      <TableView fx:id="tblhotelDetails" layoutX="102.0" layoutY="78.0" prefHeight="409.0" prefWidth="775.0">
+      <JFXTextField fx:id="txtHotelSearch" layoutX="140.0" layoutY="324.0" prefHeight="31.0" prefWidth="699.0" promptText="rechercher par nom/localisation" />
+      <TableView fx:id="tblhotelDetails" layoutX="44.0" layoutY="374.0" onMouseClicked="#getSelected" prefHeight="305.0" prefWidth="778.0">
          <columns>
             <TableColumn fx:id="nom_h" prefWidth="274.0" text="Nom hôtel" />
             <TableColumn fx:id="lo" prefWidth="302.0" text="Localisation" />
             <TableColumn fx:id="caté" prefWidth="198.0" text="Catégorie" />
          </columns>
       </TableView>
+      <VBox layoutX="220.0" layoutY="88.0" prefHeight="348.0" prefWidth="475.0">
+         <children>
+            <JFXTextField fx:id="nom" labelFloat="true" promptText="Nom Hôtel:">
+               <VBox.margin>
+                  <Insets left="100.0" top="40.0" />
+               </VBox.margin>
+            </JFXTextField>
+            <JFXTextField fx:id="localisation" labelFloat="true" layoutX="10.0" layoutY="10.0" promptText="Localisation:">
+               <VBox.margin>
+                  <Insets left="100.0" top="20.0" />
+               </VBox.margin>
+            </JFXTextField>
+            <JFXTextField fx:id="catégorie" labelFloat="true" layoutX="10.0" layoutY="36.0" promptText="Catégorie:">
+               <VBox.margin>
+                  <Insets left="100.0" top="20.0" />
+               </VBox.margin>
+            </JFXTextField>
+         </children>
+      </VBox>
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="153.0" layoutY="14.0" prefHeight="44.0" prefWidth="635.0" text="Liste des Hôtels">
+         <font>
+            <Font name="System Bold" size="25.0" />
+         </font>
+      </Label>
+      <JFXButton fx:id="btnDelete" layoutX="212.0" layoutY="701.0" onAction="#Delete" prefHeight="26.0" prefWidth="112.0" style="-fx-background-color: #f44336;" text="DELETE" />
+      <JFXButton fx:id="btnUpdate" layoutX="490.0" layoutY="701.0" onAction="#UpdateTable" prefHeight="26.0" prefWidth="112.0" style="-fx-background-color: #008CBA;" text="UPDATE" />
+      <GridPane fx:id="grid_img" layoutX="888.0" layoutY="393.0" prefHeight="244.0" prefWidth="200.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Separator orientation="VERTICAL" prefHeight="200.0" />
+         </children>
+      </GridPane>
+      <Separator layoutX="888.0" layoutY="393.0" prefWidth="200.0" />
+      <Separator layoutX="888.0" layoutY="644.0" prefWidth="200.0" />
+      <Separator layoutX="1096.0" layoutY="386.0" orientation="VERTICAL" prefHeight="229.0" prefWidth="6.0" />
    </children>
 </AnchorPane>
