--- a/src/GUI/AfficheRestaurantClient.fxml
+++ b/src/GUI/AfficheRestaurantClient.fxml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="580.0" prefWidth="1123.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AfficheRestaurantController">
+<AnchorPane id="AnchorPane" prefHeight="694.0" prefWidth="1123.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AfficheRestaurantClientController">
    <children>
-      <JFXTextField fx:id="searchres" layoutX="66.0" layoutY="170.0" prefHeight="31.0" prefWidth="642.0" promptText="Rechercher par nom localisation spécialité ou nombre fourchet" />
-      <TableView fx:id="id_affiche" layoutX="33.0" layoutY="225.0" onMouseClicked="#getSelected" prefHeight="240.0" prefWidth="852.0">
+      <JFXTextField fx:id="searchres" layoutX="57.0" layoutY="301.0" prefHeight="31.0" prefWidth="642.0" promptText="Rechercher par nom localisation spécialité ou nombre fourchet" />
+      <TableView fx:id="id_affiche" layoutX="24.0" layoutY="356.0" prefHeight="240.0" prefWidth="852.0">
         <columns>
           <TableColumn fx:id="nom_res" prefWidth="142.0" text="Nom restaurant" />
           <TableColumn fx:id="lo" prefWidth="142.0" text="Localisation" />
@@ -24,12 +27,12 @@
             <TableColumn fx:id="téléphone" prefWidth="142.0" text="Numéro téléphone" />
         </columns>
       </TableView>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="186.0" layoutY="22.0" prefHeight="44.0" prefWidth="635.0" text="Liste des Restaurants">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="177.0" layoutY="153.0" prefHeight="44.0" prefWidth="635.0" text="Liste des Restaurants">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
       </Label>
-      <GridPane layoutX="939.0" layoutY="297.0" prefHeight="125.0" prefWidth="137.0">
+      <GridPane layoutX="930.0" layoutY="428.0" prefHeight="125.0" prefWidth="137.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -37,9 +40,18 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
-      <Separator layoutX="908.0" layoutY="289.0" prefWidth="200.0" />
-      <Separator layoutX="908.0" layoutY="432.0" prefWidth="200.0" />
-      <Separator layoutX="1102.0" layoutY="287.0" orientation="VERTICAL" prefHeight="145.0" prefWidth="3.0" />
-      <Separator layoutX="905.0" layoutY="287.0" orientation="VERTICAL" prefHeight="145.0" prefWidth="3.0" />
+      <Separator layoutX="899.0" layoutY="420.0" prefWidth="200.0" />
+      <Separator layoutX="899.0" layoutY="563.0" prefWidth="200.0" />
+      <Separator layoutX="1093.0" layoutY="418.0" orientation="VERTICAL" prefHeight="145.0" prefWidth="3.0" />
+      <Separator layoutX="896.0" layoutY="418.0" orientation="VERTICAL" prefHeight="145.0" prefWidth="3.0" />
+      <Separator layoutX="16.0" layoutY="85.0" prefHeight="20.0" prefWidth="1162.0" style="-fx-background-color: #6BD5C7;" />
+      <JFXButton layoutX="262.0" layoutY="47.0" onAction="#gotoRestaurant" prefHeight="31.0" prefWidth="119.0" style="-fx-border-color: #436D4E;" text="Restaurant" />
+      <JFXButton layoutX="421.0" layoutY="47.0" onAction="#gotoHotel" prefHeight="31.0" prefWidth="119.0" style="-fx-border-color: #436D4E;" text="Hôtel" />
+      <ImageView fitHeight="46.0" fitWidth="426.0" layoutX="21.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@LOGO%20GET%20.png" />
+         </image>
+      </ImageView>
+      <JFXButton layoutX="969.0" layoutY="125.0" onAction="#gotoReservationResto" prefHeight="31.0" prefWidth="181.0" style="-fx-border-color: #43696D;" text="Reserver une table " />
    </children>
 </AnchorPane>
