--- a/src/GUI/modfier_user.fxml
+++ b/src/GUI/modfier_user.fxml
@@ -4,34 +4,32 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Modfier_userController">
    <children>
-      <TextField layoutX="118.0" layoutY="33.0" />
+      <TextField fx:id="first_name" layoutX="118.0" layoutY="33.0" />
       <Label layoutX="21.0" layoutY="37.0" text="first name" />
-      <TextField layoutX="117.0" layoutY="62.0" />
+      <TextField fx:id="last_name" layoutX="117.0" layoutY="62.0" />
       <Label layoutX="22.0" layoutY="66.0" text="last name" />
       <Label layoutX="21.0" layoutY="98.0" text="sexe" />
-      <TextField layoutX="117.0" layoutY="127.0" />
+      <TextField fx:id="telephone" layoutX="117.0" layoutY="127.0" />
       <Label layoutX="18.0" layoutY="131.0" text="telepohne" />
-      <TextField layoutX="117.0" layoutY="156.0" />
+      <TextField fx:id="email" layoutX="117.0" layoutY="156.0" />
       <Label layoutX="18.0" layoutY="160.0" text="email" />
-      <TextField layoutX="117.0" layoutY="186.0" />
+      <TextField fx:id="pays" layoutX="117.0" layoutY="186.0" />
       <Label layoutX="21.0" layoutY="190.0" text="pays" />
-      <TextField layoutX="117.0" layoutY="220.0" />
+      <TextField fx:id="ville" layoutX="117.0" layoutY="220.0" />
       <Label layoutX="22.0" layoutY="224.0" text="ville" />
-      <TextField layoutX="117.0" layoutY="252.0" />
+      <TextField fx:id="zip" layoutX="117.0" layoutY="252.0" />
       <Label layoutX="25.0" layoutY="256.0" text="zip" />
       <Label layoutX="18.0" layoutY="288.0" text="date de naissance " />
-      <ChoiceBox layoutX="117.0" layoutY="94.0" prefWidth="150.0" />
-      <DatePicker layoutX="117.0" layoutY="284.0" />
-      <TextField layoutX="116.0" layoutY="318.0" />
+      <ChoiceBox fx:id="sexe" layoutX="117.0" layoutY="94.0" prefWidth="150.0" />
+      <DatePicker fx:id="date_de_naissance" layoutX="117.0" layoutY="284.0" />
       <Label layoutX="21.0" layoutY="322.0" text="password" />
-      <TextField layoutX="116.0" layoutY="350.0" />
-      <Label layoutX="20.0" layoutY="354.0" text="confirm password" />
-      <Button layoutX="425.0" layoutY="328.0" mnemonicParsing="false" text="modfication" />
+      <Button fx:id="change" layoutX="425.0" layoutY="328.0" mnemonicParsing="false" onAction="#change_modification" text="apply" />
+      <PasswordField fx:id="password" layoutX="117.0" layoutY="318.0" />
    </children>
 </AnchorPane>
