--- a/src/GUI/setuser.fxml
+++ b/src/GUI/setuser.fxml
@@ -1,16 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.SetuserController">
    <children>
-      <TableView layoutX="184.0" layoutY="78.0" prefHeight="200.0" prefWidth="258.0">
+      <TableView fx:id="TVuser" layoutX="56.0" layoutY="64.0" prefHeight="298.0" prefWidth="497.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="C1" />
-          <TableColumn prefWidth="75.0" text="C2" />
+          <TableColumn fx:id="name" prefWidth="32.666656494140625" text="name" />
+          <TableColumn fx:id="last_name" prefWidth="52.333343505859375" text="last name" />
+            <TableColumn fx:id="sexe" minWidth="0.0" prefWidth="33.66668701171875" text="sexe" />
+            <TableColumn fx:id="telephone" minWidth="0.0" prefWidth="56.66668701171875" text="telephone" />
+            <TableColumn fx:id="email" prefWidth="29.33331298828125" text="email" />
+            <TableColumn fx:id="pays" prefWidth="43.33331298828125" text="pays" />
+            <TableColumn fx:id="ville" minWidth="0.0" prefWidth="44.0" text="ville" />
+            <TableColumn fx:id="zip" minWidth="0.0" prefWidth="52.33331298828125" text="zip" />
+            <TableColumn fx:id="date" minWidth="0.0" prefWidth="44.6666259765625" text="date" />
+            <TableColumn fx:id="blocked" minWidth="0.0" prefWidth="36.66668701171875" text="blocked" />
+            <TableColumn fx:id="verified" minWidth="0.0" prefWidth="65.6666259765625" text="verified" />
+        </columns>
+      </TableView>
+      <TextField fx:id="recherche" layoutX="197.0" layoutY="27.0" />
+      <Button layoutX="7.0" layoutY="245.0" mnemonicParsing="false" text="delete" />
+      <Button layoutX="9.0" layoutY="200.0" mnemonicParsing="false" text="block" />
+      <Button layoutX="9.0" layoutY="293.0" mnemonicParsing="false" text="apply" />
+      <TableView fx:id="TV_role" layoutX="552.0" layoutY="64.0" prefHeight="298.0" prefWidth="45.0">
+        <columns>
+            <TableColumn fx:id="role" minWidth="0.0" prefWidth="44.0" text="role" />
         </columns>
       </TableView>
    </children>
